--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
+redis==2.10.6
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.1.0
