--- a/config.py.example
+++ b/config.py.example
@@ -1,5 +1,6 @@
 import os
-from darc_evalutator import compute_score_round1, compute_score_round2
+from metrics import utility_metric
+from utils import compare_f_files
 
 class Config:
     REDIS_HOST=os.environ.get("REDIS_HOST", "localhost")
@@ -10,7 +11,10 @@ class Config:
     OC_USR=os.environ.get("OC_USR", "test")
     OC_PASSWORD=os.environ.get("OC_PASSWORD", "password")
 
-    TEST_U_METRICS = compute_score_round1
-    TEST_R_METRICS = compute_score_round2
-
     TESTING = True
+
+    GROUND_TRUTH = "data/ground_truth.csv"
+    TESTING_DIR = "data/testing_files/"
+
+    utility_metric = utility_metric
+    reid_metric = compare_f_files
