--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,12 @@ data/example_files/*
 
 !data/testing_files/
 data/testing_files/*
-!data/example_files/AT/
-!data/example_files/F/
-data/example_files/AT/*
-data/example_files/F/*
-!data/example_files/AT/*.csv
-!data/example_files/F/*.csv
+!data/testing_files/AT/
+!data/testing_files/F/
+data/testing_files/AT/*
+data/testing_files/F/*
+!data/testing_files/AT/*.csv
+!data/testing_files/F/*.csv
 
 !data/*.csv
 
