dockerfile-test: add __init__.py to darc-compare

--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -21,7 +21,10 @@ ADD . /DARC/darc_compare
 WORKDIR /DARC/darc_compare
 RUN git checkout tested
 # RUN git clone --branch tested https://gitlab.ikb.info.uqam.ca/alaurent/darc_aicrowd.git /DARC/darc_compare
-COPY ./config.py.example /DARC-CORE/darc_compare/config.py
+
+RUN cp ./config.py.example ./config.py
+RUN touch __init__.py
+RUN ls
 
 WORKDIR /DARC
 RUN ls
