--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - redis
       - owncloud
-    command: ["/wait-for-it.sh", "10.6.0.6:8080", "--", "python3.6", "/DARC/test.py"]
+    command: ["/wait-for-it.sh", "10.6.0.6:8080", "--", "python3.6", "/DARC/darc_evaluator.py"]
     environment:
       - REDIS_HOST=10.6.0.5
       - REDIS_PORT=6379
